!#11 Add: resume for xelatex

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -7,12 +7,10 @@
 
 \name{Luis Mayta}
 
-% {E-mail}{mobilephone}{homepage}
-% be careful of _ in emaill address
-\contactInfo{slovacus@gmail.com}{(+51) 959196850}{http://luismayta.github.io}
-% {E-mail}{mobilephone}
-% keep the last empty braces!
-%\contactInfo{xxx@luismayta.me}{(+86) 959196850}{}
+\basicInfo{
+  \email{slovacus@gmail.com} \textperiodcentered\
+  \phone{(+51) 959-196-850} \textperiodcentered\
+  \linkedin[luismayta]{https://www.linkedin.com/in/luismayta}}
 
 \section{\faGraduationCap\ Education}
 \datedsubsection{\textbf{ISTP Peruano Aleman}, Lima, Peru}{2002 -- 2005}
@@ -64,25 +62,9 @@ Brief introduction: xxx
   \item xxx
 \end{itemize}
 
-\datedsubsection{\textbf{\LaTeX\ résumé template}}{Jul. 2016 -- Present}
-\role{\LaTeX, Maintainer}{Individual Projects}
-An elegant \LaTeX\ résumé template, https://github.com/luismayta/resume
-\begin{itemize}
-  \item Easy to be further customized or extended
-  \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
-  \item FontAwesome 4.5.0 support
-\end{itemize}
-
-% Reference Test
-%\datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
-%An xxx optimized for xxx\cite{verma2015large}
-%\begin{itemize}
-%  \item main contribution
-%\end{itemize}
-
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: Go > Python > Java > E-lisp
+  \item Programming Languages: Go > Python > Elixir > E-lisp
   \item Platform: Linux, OSX
   \item Editor: Emacs, Vim
   \item Development: Web, Mobile, Desktop
