!#5 Add: info company

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -10,29 +10,91 @@
 \basicInfo{
   \email{slovacus@gmail.com} \textperiodcentered\
   \phone{(+51) 959-196-850} \textperiodcentered\
-  \linkedin[luismayta]{https://www.linkedin.com/in/luismayta}}
+  \linkedin[Linkedin]{https://www.linkedin.com/in/luismayta}
+  \github[Github]{https://github.com/luismayta}}
 
 \section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{ISTP Peruano Aleman}, Lima, Peru}{2002 -- 2005}
-\textit{B.S.} in Software Developer (EE)
+
+\datedsubsection{\textbf{Udacity}, Lima, Peru}{2017 -- 2017}
+\textit{B.S.} DevOps, Computer Software Developer
+
+\datedsubsection{\textbf{Open Source College}, Lima, Peru}{2011 -- 2012}
+\textit{B.S.} Software Developer
+
+\datedsubsection{\textbf{ISTP Peruano Aleman}, Lima, Peru}{2002 -- 2007}
+\textit{B.S.} in Software Developer
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{DgNest} Lima, Peru}{2015 -- Present}
-\role{DevOps}{}
+\datedsubsection{\textbf{La Positiva Seguros} Lima, Peru}{June 2017 -- Present}
+\role{Cloud Architect}{}
 Brief introduction: xxx.
 \begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
+  \item Develop Ansible playbooks for provisioning servers environments
+  \item AWS Cloud Adoption Tester.
+  \item AWS Architect Design
+  \item AWS Dev Operations.
+  \item Config as code with Vault.
+  \item Infrastructure as code with Terraform + Ansible + AWS.
+  \item Implement CI with Wercker.
+  \item Implement and Management of Docker
+  \item Implement and Management of docker-compose
+  \item Implement and Management of Wercker
+  \item Implement and Management of Monit
+  \item Implement and Management of JMS ActiveMQ
+  \item Make documentation with sphink
+  \item Implement and Management ChatBot with Aws Lambda
+\end{itemize}
+
+\datedsubsection{\textbf{Fashion Bag Peru} Lima, Peru}{ April 2017 -- Present}
+\role{DevOps/SRE}{}
+Brief introduction: xxx.
+\begin{itemize}
+  \item AWS Cloud Adoption Tester.
+  \item AWS Architect Design
+  \item AWS Dev Operations.
+  \item Infrastructure as code with Terraform + Ansible + AWS.
+  \item Implement and Management of Docker
+  \item Implement and Management of docker-compose
+  \item Implement and Management of Wercker
+  \item Implement and Management of Monit
+\end{itemize}
+
+\datedsubsection{\textbf{Ventorystack} Lima, Peru}{ January 2017 -- June 2017}
+\role{Software Architect}{}
+Brief introduction: xxx.
+\begin{itemize}
+  \item AWS Cloud Adoption Tester.
+  \item AWS Architect Design
+  \item AWS Dev Operations.
+  \item Infrastructure as code with Terraform + Ansible + AWS.
+  \item Implement TDD and BDD.
+  \item Implement CI with Wercker.
+  \item Implement and Management of Docker
+  \item Implement and Management of docker-compose
+  \item Implement and Management of Wercker
+  \item Implement and Management of Monit
+  \item Research Terraform, CloudFormation, TravisCI, GitlabCI.
+  \item Implement and Management ChatBot with Aws Lambda
 \end{itemize}
 
 \datedsubsection{\textbf{HadenLabs} Lima, Peru}{2014 -- Present}
 \role{DevOps}{}
 Brief introduction: xxx.
 \begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
+  \item Develop Ansible playbooks for provisioning servers environments
+  \item AWS Cloud Adoption Tester.
+  \item AWS Architect Design
+  \item AWS Dev Operations.
+  \item Config as code with Vault.
+  \item Infrastructure as code with Terraform + Ansible + AWS.
+  \item Implement CI with Wercker.
+  \item Implement and Management of Docker
+  \item Implement and Management of docker-compose
+  \item Implement and Management of Wercker
+  \item Implement and Management of Monit
+  \item Implement and Management of JMS ActiveMQ
+  \item Make documentation with sphink
+  \item Implement and Management ChatBot with Aws Lambda
 \end{itemize}
 
 \datedsubsection{\textbf{Pimienta Digital} Lima, Peru}{2014 -- 2015}
@@ -53,7 +115,7 @@ Brief introduction: xxx.
   \item xxx
 \end{itemize}
 
-\datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
+\datedsubsection{\textbf{Projects}}{Jan. 2015 -- Present}
 \role{Python, Golang, Django, Linux}{Individual Projects, collaborated with xxx}
 Brief introduction: xxx
 \begin{itemize}
@@ -75,7 +137,6 @@ Brief introduction: xxx
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://blog.luismayta.me
   \item GitHub: https://github.com/luismayta
   \item Linkedin: https://pe.linkedin.com/in/luismayta
   \item Languages: English - Limited Working Proficiency, Spanish - Native speaker
