--- a/src/main.tex
+++ b/src/main.tex
@@ -44,7 +44,7 @@
 \usepackage[default]{lato}
 
 % If using xelatex or lualatex:
-% \setmainfont{Lato}
+%% \setmainfont{Lato}
 
 % Change the colours if you want to
 \definecolor{VividPurple}{HTML}{3E0097}
