chore: implement labor working chatydelivery (#32)

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -91,7 +91,41 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cvevent{Cloud Architect}{\textbf{La Positiva Seguros}}{June 2017 -- Present}{Lima, Peru}
+\cvevent{Bot Developer/SRE}{\textbf{ChatyDelivery}}{November 2017 -- Present}{Lima, Peru}
+\begin{itemize}
+  \item AWS Cloud Adoption Tester.
+  \item AWS Architect Design
+  \item AWS Dev Operations.
+  \item Infrastructure as code with Terraform.
+  \item Implement and Management of CI
+  \item Implement and Management of CD
+  \item Implement and Management of Docker
+  \item Implement and Management of docker-compose
+  \item Implement and Management of Chatbot for Facebook, Slack
+  \item Implement And Management of Elastic Search
+  \item Implement And Management of Grafana
+  \item Implement Sem Version for projects.
+\end{itemize}
+
+\divider
+
+\cvevent{Cloud Engineer/SRE}{\textbf{Fashion Bag Peru}}{April 2017 -- Present}{Lima, Peru}
+\begin{itemize}
+\item AWS Cloud Adoption Tester.
+  \item AWS Architect Design
+  \item AWS Dev Operations.
+  \item Infrastructure as code with Terraform + Ansible + AWS.
+  \item Implement and Management of Docker
+  \item Implement and Management of docker-compose
+  \item Implement and Management of Wercker
+  \item Implement and Management of Monit
+  \item Implement Sem Version for projects.
+  \item Implement Management of git with Git Flow.
+\end{itemize}
+
+\divider
+
+\cvevent{Cloud Architect}{\textbf{La Positiva Seguros}}{June 2017 -- November 2017}{Lima, Peru}
 \begin{itemize}
   \item Develop Ansible playbooks for provisioning servers environments
   \item AWS Cloud Adoption Tester.
@@ -108,22 +142,6 @@
   \item Implement Management of git with Git Flow.
   \item Implement Sem Version for projects.
   \item Implement and Management ChatBot with Aws Lambda
-\end{itemize}
-
-\divider
-
-\cvevent{DevOps/SRE}{\textbf{Fashion Bag Peru}}{April 2017 -- Present}{Lima, Peru}
-\begin{itemize}
-\item AWS Cloud Adoption Tester.
-  \item AWS Architect Design
-  \item AWS Dev Operations.
-  \item Infrastructure as code with Terraform + Ansible + AWS.
-  \item Implement and Management of Docker
-  \item Implement and Management of docker-compose
-  \item Implement and Management of Wercker
-  \item Implement and Management of Monit
-  \item Implement Sem Version for projects.
-  \item Implement Management of git with Git Flow.
 \end{itemize}
 
 \divider
