chore: bot developer to resume (#32)

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -91,11 +91,15 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cvevent{Cloud Architect}{\textbf{La Positiva Seguros}}{June 2017 -- Present}{Lima, Peru}
+\cvevent{Bot Developer/SRE}{\textbf{ChatyDelivery}}{November 2017 -- Present}{Lima, Peru}
 
 \divider
 
-\cvevent{DevOps/SRE}{\textbf{Fashion Bag Peru}}{April 2017 -- Present}{Lima, Peru}
+\cvevent{Cloud Engineer/SRE}{\textbf{Fashion Bag Peru}}{April 2017 -- Present}{Lima, Peru}
+
+\divider
+
+\cvevent{Cloud Architect}{\textbf{La Positiva Seguros}}{June 2017 -- November 2017}{Lima, Peru}
 
 \divider
 
