--- a/src/resume.tex
+++ b/src/resume.tex
@@ -139,9 +139,19 @@
 
 \nocite{*}
 
-%% \printbibliography[heading=pubtype,title={\printinfo{\faBook}{Books}},type=book]
+\cvevent{Mean Full-Stack}{\textbf{Compartiendo Conocimiento}}{April 2015}{Hauraz, Peru}
+\begin{itemize}
+  \item Co-organizer.
+\end{itemize}
 
-%% \divider
+\divider
+
+\cvevent{Introduction to NoSQL MongoDB}{\textbf{MongoDB Peru}}{April 2014}{Huaraz, Peru}
+\begin{itemize}
+  \item Speaker.
+\end{itemize}
+\divider
+
 
 %% \printbibliography[heading=pubtype,title={\printinfo{\faFileTextO}{Journal Articles}}, type=article]
 
