--- a/src/cv.tex
+++ b/src/cv.tex
@@ -264,6 +264,19 @@
 
 \nocite{*}
 
+\cvevent{Mean Full-Stack}{\textbf{Compartiendo Conocimiento}}{April 2015}{Hauraz, Peru}
+\begin{itemize}
+  \item Co-organizer.
+\end{itemize}
+
+\divider
+
+\cvevent{Introduction to NoSQL MongoDB}{\textbf{MongoDB Peru}}{April 2014}{Huaraz, Peru}
+\begin{itemize}
+  \item Speaker.
+\end{itemize}
+\divider
+
 %% \printbibliography[heading=pubtype,title={\printinfo{\faBook}{Books}},type=book]
 
 %% \divider
