chore: settings volunteer (#33)

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -277,6 +277,22 @@
 \end{itemize}
 \divider
 
+\cvsection{Volunteer}
+
+\cvevent{Development Leader}{\textbf{Compartiendo Conocimiento}}{February 2015 - Present}{Lima, Peru}
+\begin{itemize}
+  \item Co-organizer.
+  \item Research.
+\end{itemize}
+\divider
+
+\cvevent{Member \& Evangelist}{\textbf{MongoDB Peru}}{June 2013 - Present}{Lima, Peru}
+\begin{itemize}
+  \item Speaker
+  \item Research.
+\end{itemize}
+
+\divider
 %% \printbibliography[heading=pubtype,title={\printinfo{\faBook}{Books}},type=book]
 
 %% \divider
