chore: volunteer experience (#36)

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -137,8 +137,6 @@
 
 \cvsection[page2sidebar]{Conferences}
 
-\nocite{*}
-
 \cvevent{Mean Full-Stack}{\textbf{Compartiendo Conocimiento}}{April 2015}{Hauraz, Peru}
 \begin{itemize}
   \item Co-organizer.
@@ -150,6 +148,23 @@
 \begin{itemize}
   \item Speaker.
 \end{itemize}
+\divider
+
+\cvsection{Volunteer}
+
+\cvevent{Development Leader}{\textbf{Compartiendo Conocimiento}}{February 2015 - Present}{Lima, Peru}
+\begin{itemize}
+  \item Co-organizer.
+  \item Research.
+\end{itemize}
+\divider
+
+\cvevent{Member \& Evangelist}{\textbf{MongoDB Peru}}{June 2013 - Present}{Lima, Peru}
+\begin{itemize}
+  \item Speaker
+  \item Research.
+\end{itemize}
+
 \divider
 
 
