--- a/src/cv.tex
+++ b/src/cv.tex
@@ -65,7 +65,7 @@
 
 \begin{document}
 \name{Luis Mayta}
-\tagline{Site Reliability Engineer \& Proud Geek}
+\tagline{Passionate Coder {;} | Cryptocurrency and AI Enthusiast | Cloud Consultant | Site Realiability \& Proud Geek}
 \photo{2.5cm}{avatar.jpg}
 \personalinfo{%
   % Not all of these are required!
@@ -91,36 +91,65 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cvevent{Bot Developer/SRE}{\textbf{ChatyDelivery}}{November 2017 -- Present}{Lima, Peru}
+\cvevent{Cloud Consultant | SRE | DevOps}{\textbf{Vipac}}{January 2019 -- April 2020}{Lima, Peru}
 \begin{itemize}
-  \item AWS Cloud Adoption Tester.
-  \item AWS Architect Design
-  \item AWS Dev Operations.
-  \item Infrastructure as code with Terraform.
-  \item Implement and Management of CI
-  \item Implement and Management of CD
-  \item Implement and Management of Docker
-  \item Implement and Management of docker-compose
-  \item Implement and Management of Chatbot for Facebook, Slack
-  \item Implement And Management of Elastic Search
-  \item Implement And Management of Grafana
-  \item Implement Sem Version for projects.
+    \item I also replaced and improved the entire monitoring stack and wrote lots of alert rules and even custom Prometheus exporters to achieve what was needed.
+    \item There was a continuous work on improving the costs of infrastructure. This involved resizing machines, auto scaling groups, spot instances, backup policies and several other things.
+    \item Test driven releases, Infrastructure as code and Automation.
+    \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
+    \item Administration and troubleshooting of CI, CD Continuous Integration environment.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Implement And Administration of Docker And Docker Compose
+    \item AWS Architect Design
+    \item Infrastructure as code with Terraform + Ansible + AWS.
+    \item Implement and Management of Docker and Docker compose
+    \item Implement and Management of Wercker
+    \item Implement Management of git with Git Flow.
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
 \end{itemize}
 
 \divider
 
-\cvevent{Cloud Engineer/SRE}{\textbf{Fashion Bag Peru}}{April 2017 -- Present}{Lima, Peru}
+\cvevent{Cloud Engineer | SRE}{\textbf{Fashion Bag Peru}}{April 2017 -- January 2018}{Lima, Peru}
 \begin{itemize}
-\item AWS Cloud Adoption Tester.
-  \item AWS Architect Design
-  \item AWS Dev Operations.
-  \item Infrastructure as code with Terraform + Ansible + AWS.
-  \item Implement and Management of Docker
-  \item Implement and Management of docker-compose
-  \item Implement and Management of Wercker
-  \item Implement and Management of Monit
-  \item Implement Sem Version for projects.
-  \item Implement Management of git with Git Flow.
+    \item AWS Cloud Adoption Tester.
+    \item AWS Architect Design
+    \item AWS Dev Operations.
+    \item Infrastructure as code with Terraform + Ansible + AWS.
+    \item Implement and Management of Docker
+    \item Implement and Management of docker-compose
+    \item Implement and Management of Wercker
+    \item Implement and Management of Monit
+    \item Implement Sem Version for projects.
+    \item Implement Management of git with Git Flow.
+\end{itemize}
+
+\divider
+
+\cvevent{Cloud Engineer | Site Realiability Engineer }{\textbf{Online Studio Productions}}{November 2017 -- January 2018}{Lima, Peru}
+\begin{itemize}
+    \item Support a distributed development team.
+    \item Analysis and deployment of scalable solutions.
+    \item Manage and optimize (cost and performance) of cloud resources.
+    \item Integration of different subsystems
+    \item Proposing constant improvements.
+    \item Implementation and Monitoring of Servers
+    \item AWS Cloud Adoption Tester.
+    \item AWS Architect Design
+    \item AWS Design
+    \item AWS Dev Operations.
+    \item Infrastructure as code with Terraform + Ansible + AWS.
+    \item Testing ansible playbooks and changes on server.
+    \item Implement And Administration of Docker And Docker Compose
+    \item Implement And Administration of CI, CD
+    \item Implement And Administration of Wercker and BDD
+    \item Implement And Administration of Monit
+    \item Monitoring and Implementation of Notifications to slack.
+    \item Implementation And Administration of Services AWS SQS, AWS Elasticache
+    \item Implementation WorkFlow with gitlab
+    \item Implement and Management of Monit
+    \item Implement Sem Version for projects.
+    \item Implement Management of git with Git Flow.
 \end{itemize}
 
 \divider
@@ -166,7 +195,7 @@
 
 \divider
 
-\cvevent{DevOps/SRE}{\textbf{Ventorystack}}{August 2015 -- January 2017}{Lima, Peru}
+\cvevent{DevOps | SRE}{\textbf{Ventorystack}}{August 2015 -- January 2017}{Lima, Peru}
 \begin{itemize}
   \item AWS Cloud Adoption Tester.
   \item AWS Architect Design
@@ -181,27 +210,6 @@
   \item Implement Management of git with Git Flow.
   \item Implement Sem Version for projects.
   \item Research Terraform, Terraform, Jenkins, GitlabCI.
-  \item Implement and Management ChatBot with Aws Lambda
-\end{itemize}
-
-\divider
-
-\cvevent{DevOps/SRE}{\textbf{HadenLabs}}{August 2014 -- Present}{Lima, Peru}
-\begin{itemize}
-  \item Develop Ansible playbooks for provisioning servers environments
-  \item AWS Cloud Adoption Tester.
-  \item AWS Architect Design
-  \item AWS Dev Operations.
-  \item Config as code with Vault.
-  \item Infrastructure as code with Terraform + Ansible + AWS.
-  \item Implement CI with Wercker.
-  \item Implement and Management of Docker
-  \item Implement and Management of docker-compose
-  \item Implement and Management of Wercker
-  \item Implement and Management of Monit
-  \item Implement Management of git with Git Flow.
-  \item Implement Sem Version for projects.
-  \item Make documentation with sphink
   \item Implement and Management ChatBot with Aws Lambda
 \end{itemize}
 
