refactor: information pagesidebar (#40)

--- a/src/page1sidebar.tex
+++ b/src/page1sidebar.tex
@@ -27,14 +27,16 @@
 \cvsection{Languages}
 
 \cvskill{Spanish}{5}
-\cvskill{English}{2}
+\cvskill{English}{3}
 
 \cvsection{Skills}
 
 \cvskill{Python}{5}
+\cvskill{Go}{4}
 \cvskill{Cloud Computing}{4}
-\cvskill{Go}{3}
+\cvskill{Design Patterns}{4}
 \cvskill{AWS}{3}
 \cvskill{Infraestructure as Code}{3}
 \cvskill{Automation}{3}
-\cvskill{Design Patterns}{3}
+\cvskill{Rust}{2}
+\cvskill{Security}{2}
