--- a/src/resume.tex
+++ b/src/resume.tex
@@ -73,7 +73,7 @@
   \email{slovacus@gmail.com}
   \phone{(+51) 959-196-850}
   \location{Lima, Peru}
-  \homepage{luismayta.github.io}
+  \homepage{luismayta.me}
   \twitter{@slovacus}
   \linkedin{linkedin.com/in/luismayta}
   \github{github.com/luismayta} % I'm just making this up though.
