--- a/src/cv.tex
+++ b/src/cv.tex
@@ -22,7 +22,7 @@
 %% Use the "normalphoto" option if you want a normal photo instead of cropped to a circle
 % \documentclass[10pt,a4paper,normalphoto]{altacv}
 
-\documentclass[10pt,a4paper]{altacv}
+\documentclass[10pt,a4paper]{./core/altacv}
 
 %% AltaCV uses the fontawesome and academicon fonts
 %% and packages.
