--- a/src/resume.tex
+++ b/src/resume.tex
@@ -22,7 +22,7 @@
 %% Use the "normalphoto" option if you want a normal photo instead of cropped to a circle
 % \documentclass[10pt,a4paper,normalphoto]{altacv}
 
-\documentclass[10pt,a4paper]{altacv}
+\documentclass[10pt,a4paper]{./core/altacv}
 
 %% AltaCV uses the fontawesome and academicon fonts
 %% and packages.
@@ -66,7 +66,7 @@
 \begin{document}
 \name{Luis Mayta}
 \tagline{Site Reliability Engineer \& Proud Geek}
-\photo{2.5cm}{avatar.jpg}
+\photo{2.5cm}{../static/images/avatar.jpg}
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
