--- a/src/core/altacv.cls
+++ b/src/core/altacv.cls
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%
-% This is altacv.cls (v1.1.3, 30 April 2017) written by
+% This is altacv.cls (v1.1.5, 1 December 2018) written by
 % LianTze Lim (liantze@gmail.com).
 %
 %% It may be distributed and/or modified under the
@@ -9,10 +9,19 @@
 %%    http://www.latex-project.org/lppl.txt
 %% and version 1.3 or later is part of all distributions of LaTeX
 %% version 2003/12/01 or later.
+%%
+%%
+% Contributions:
+% - https://github.com/akreuzer Added ragged2e option (5 Nov 2018)
+% - https://github.com/stefanogermano Fixed bad boxes and undefined font shape (July 2018)
+% - https://github.com/foohyfooh Fixed blank spaces in \cvevent and bad link in README.md (June 2018)
+
 %%%%%%%%%%%%%%%%
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
-\ProvidesClass{altacv}[2017/04/30 AltaCV v1.1.3, yet another alternative class for a résumé/curriculum vitae.]
-\DeclareTextCommand{\nobreakspace}{T1}{\leavevmode\nobreak\ }
+%% v1.4: Detect TL2018 to handle accented characters in class information
+\@ifl@t@r\fmtversion{2018/04/01}{\UseRawInputEncoding}{}
+\ProvidesClass{altacv}[2018/12/01 AltaCV v1.1.5, yet another alternative class for a résumé/curriculum vitae.]
+
 %% v1.1: Optionally load academicons
 \newif\if@academicons
 \DeclareOption{academicons}{\@academiconstrue}
@@ -20,12 +29,31 @@
 \newif\if@normalphoto
 \DeclareOption{normalphoto}{\@normalphototrue}
 \DeclareOption*{\PassOptionsToClass{\CurrentOption}{extarticle}}
+\newif\if@raggedtwoe
+\DeclareOption{ragged2e}{\@raggedtwoetrue}
 \ProcessOptions\relax
 
 \LoadClass{extarticle}
 
 \RequirePackage[margin=2cm]{geometry}
 \RequirePackage{fontawesome}
+\RequirePackage{ifxetex,ifluatex}
+\RequirePackage{scrlfile}
+%\RequirePackage{setspace}
+
+\newif\ifbolded\boldedtrue
+
+%% v1.1.5: added for convenience
+\newif\ifxetexorluatex
+\ifxetex
+  \xetexorluatextrue
+\else
+  \ifluatex
+    \xetexorluatextrue
+  \else
+    \xetexorluatexfalse
+  \fi
+\fi
 % loading fonts
 \RequirePackage{fontspec}
 % Main document font
@@ -39,13 +67,45 @@
 ]{Lato}
 
 %% v1.1: Optionally load academicons
+%% v1.1.5: Handle different versions of academicons
 \if@academicons
-  %% Patch to make academicons compilable with XeLaTeX
-  \ExplSyntaxOn
-  \msg_redirect_name:nnn { fontspec } { font-not-found } { none }
-  \ExplSyntaxOff
-  \RequirePackage{academicons}
-  \newfontfamily{\AI}{academicons.ttf}
+  \ifxetexorluatex
+    \RequirePackage{fontspec}
+    %% academicons in TL2018 doesn't require
+    %% Academicons to be installed in OS fonts
+    %% so can be loaded directly
+    \@ifl@t@r\fmtversion{2018/04/01}{%
+      \RequirePackage{academicons}
+    }{%
+      % TL2017
+      \@ifl@t@r\fmtversion{2017/04/01}{%
+        \@ifpackagelater{academicons}{2018/03/01}{%
+          \RequirePackage{academicons}
+        }{%
+          \let\ori@newfontfamily\newfontfamily%
+          \renewcommand{\newfontfamily}[2]{}
+          \RequirePackage{academicons}
+          \let\newfontfamily\ori@newfontfamily
+          \newfontfamily{\AI}{academicons.ttf}
+        }
+      }{% TL2016 requires the package to be loaded before
+        % the version can be checked. Only added because
+        % Overleaf v1 still runs TL2016; will be removed
+        % when v1 is completely retired.
+          \let\ori@newfontfamily\newfontfamily%
+          \renewcommand{\newfontfamily}[2]{}
+          \RequirePackage{academicons}
+          \let\newfontfamily\ori@newfontfamily
+          \newfontfamily{\AI}{academicons.ttf}
+      }
+    }
+  \else
+    \ClassError{AltaCV}{academicons unsupported by latex or pdflatex. Please compile with xelatex or lualatex}{Please compile with xelatex or lualatex to use the academicons option}
+  \fi
+\fi
+
+\if@raggedtwoe
+  \RequirePackage[newcommands]{ragged2e}
 \fi
 
 \RequirePackage{xcolor}
@@ -54,6 +114,8 @@
 \colorlet{heading}{black}
 \colorlet{emphasis}{black}
 \colorlet{body}{black!80!white}
+\colorlet{lite}{gray!80}
+\colorlet{hard}{black!60!white}
 \newcommand{\itemmarker}{{\small\textbullet}}
 \newcommand{\ratingmarker}{\faCircle}
 
@@ -68,10 +130,9 @@
 \RequirePackage{dashrule}
 \RequirePackage{multirow,tabularx}
 \RequirePackage{changepage}
-% \RequirePackage{marginfix}
 
 \setlength{\parindent}{0pt}
-\newcommand{\divider}{\textcolor{body!30}{\hdashrule{\linewidth}{0.6pt}{0.5ex}}\medskip}
+\newcommand{\divider}{\textcolor{body!30}{\hdashrule{\linewidth}{0.5pt}{0.5ex}}\medskip}
 
 \newenvironment{fullwidth}{%
   \begin{adjustwidth}{}{\dimexpr-\marginparwidth-\marginparsep\relax}}
@@ -86,6 +147,7 @@
 \newcommand{\githubsymbol}{\faGithub}
 \newcommand{\orcidsymbol}{\aiOrcid}
 \newcommand{\mailsymbol}{\faEnvelope}
+\newcommand{\gpgsymbol}{\faKey\faLock}
 
 \newcommand{\printinfo}[2]{\mbox{\textcolor{accent}{#1}\hspace{0.5em}#2\hspace{2em}}}
 
@@ -101,6 +163,7 @@
 \newcommand{\github}[1]{\printinfo{\githubsymbol}{#1}}
 \newcommand{\orcid}[1]{\printinfo{\orcidsymbol}{#1}}
 \newcommand{\location}[1]{\printinfo{\locationsymbol}{#1}}
+\newcommand{\gpgkey}[1]{\printinfo{\gpgsymbol}{#1}}
 
 \newcommand{\personalinfo}[1]{\def\@personalinfo{#1}}
 
@@ -139,14 +202,16 @@
   {\color{emphasis}\large\bfseries{#1}\par}\medskip
 }
 
+% v1.1.4: fixes inconsistent font size
 \newcommand{\cvevent}[4]{%
   {\large\color{emphasis}#1\par}
-  \smallskip
+  \smallskip\normalsize
+  \ifstrequal{#2}{}{}{
   \textbf{\color{accent}#2}\par
-  \smallskip
-  {\small\makebox[0.5\linewidth][l]{\faCalendar \hspace{0.5em}#3}%
-  \ifstrequal{#4}{}{}{\makebox[0.5\linewidth][l]{\faMapMarker\hspace{0.5em}#4}}\par}
-  \medskip
+  \smallskip}
+  \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendar\hspace{0.5em}#3}}}%
+  \ifstrequal{#4}{}{}{{\small\makebox[0.5\linewidth][l]{\faMapMarker\hspace{0.5em}#4}}}\par
+  \medskip\normalsize
 }
 
 \newcommand{\cvachievement}[3]{%
@@ -158,7 +223,7 @@
 }
 
 \newcommand{\cvtag}[1]{%
-  \tikz[baseline]\node[anchor=base,draw=body!30,rounded corners,inner xsep=1ex,inner ysep =0.75ex,text height=1.5ex,text depth=.25ex]{#1};
+  \tikz[baseline]\node[anchor=base,draw=body!50,rounded corners,inner xsep=1ex,inner ysep =1ex,text height=1.4ex,text depth=.2ex]{#1};
 }
 
 \newcommand{\cvskill}[2]{%
@@ -224,12 +289,33 @@
 \newcommand{\cvref}[3]{%
   \smallskip
   \textcolor{emphasis}{\textbf{#1}}\par
-  \begin{description}[font=\color{accent},style=multiline,leftmargin=1.25em]
-  \item[\emailsymbol] #2
-  \item[\small\mailsymbol] #3
+  \begin{description}[font=\color{accent},style=multiline,leftmargin=1em]
+  \item[\normalfont\emailsymbol] #2
+  \item[\small\normalfont\mailsymbol] #3
   \end{description}
-%   \medskip
 }
+
+\newcommand\cvcert[2]%
+  {\begin{tabular}{ c | c }
+  \small
+  \textcolor{emphasis}{\textbf{#1}} & #2 \\
+   \end{tabular}%
+ }
+
+\newcommand{\cvtool}[1]{%
+      \ifbolded
+      \small\textcolor{hard}{\textbf{#1}}
+        \global\boldedfalse
+      \else
+        \small\textcolor{lite}{\normalfont{#1}}
+        \global\boldedtrue
+      \fi
+}
+
+\newcommand{\lildot}[0]{%
+    \,\,\tiny\faCircle\,\,
+}
+
 
 \newenvironment{cvcolumn}[1]{\begin{minipage}[t]{#1}\raggedright}{\end{minipage}}
 
