perf: performance sidebar information (#74)

--- a/src/page1sidebar.tex
+++ b/src/page1sidebar.tex
@@ -1,16 +1,12 @@
 \cvsection{Life Philosophy}
 \begin{quote}
-``No hay nada que no puedas hacer, si te lo propones.''
+``Talk less, Do more.''
 \end{quote}
 
 \cvsection{Most Proud of}
 
 \cvachievement{\faTrophy}{Courage I had}{take projects from scratch and do everything possible to get them forward.}
-
-\divider
-
 \cvachievement{\faHeartbeat}{Persistence \& Loyalty}{I showed despite the hard moments and my willingness.}
-
 
 \cvsection{Strengths}
 
@@ -20,23 +16,16 @@
 
 \divider\smallskip
 
-\cvtag{Backend}
-\cvtag{Automation}
-\cvtag{Architecture \& Applications}
+\cvsection{Education}
+\cvevent{DevOps/Sre}{\textbf{Udacity}, Lima, Peru}{Enero 2017 -- June 2017}{}
+\cvevent{Software Developer}{\textbf{Open Source College}, Lima, Peru}{2011 -- 2012}{}
 
-\cvsection{Languages}
+\cvsection{Certifications}
+\cvcert{Red Hat Certified Sysadmin}{120-126-396}
+\cvcert{CompTIA Linux+}{QDSZ76CC9CRES4RP}
+\cvcert{LPIC-1}{LPI000264195}
+\cvcert{Novell Certified Linux Administrator}{10192939}
 
-\cvskill{Spanish}{5}
-\cvskill{English}{3}
 
-\cvsection{Skills}
 
-\cvskill{Python}{5}
-\cvskill{Go}{4}
-\cvskill{Cloud Computing}{4}
-\cvskill{Design Patterns}{4}
-\cvskill{AWS}{3}
-\cvskill{Infraestructure as Code}{3}
-\cvskill{Automation}{3}
-\cvskill{Rust}{2}
-\cvskill{Security}{2}
+\addnextpagesidebar[-1ex]{page2sidebar}
