--- a/src/page2sidebar.tex
+++ b/src/page2sidebar.tex
@@ -1,10 +1,34 @@
-\cvsection{Education}
+\cvsection{Skills}
 
-\cvevent{DevOps/Sre}{\textbf{Udacity}, Lima, Peru}{Enero 2017 -- June 2017}{}
-\divider
-\cvevent{Software Developer}{\textbf{Open Source College}, Lima, Peru}{2011 -- 2012}{}
-\divider
-\cvevent{Software Developer}{\textbf{ISTP Peruano Aleman}, Lima, Peru}{2002 -- 2007}{}
+\cvskill{Go}{5}
+\cvskill{Python}{5}
+\cvskill{Bash}{5}
+\cvskill{Cloud Computing}{4}
+\cvskill{AWS}{4}
+\cvskill{Infraestructure as Code}{4}
+\cvskill{Design Patterns}{4}
+\cvskill{Automation}{3}
+\cvskill{Lua}{3}
+\cvskill{Security}{3}
+\cvskill{Rust}{2}
+
+\cvsection{\mbox{Technical Interests}}
+\cvtag{Infraestructure as Code}
+\cvtag{monitoring and alerting}
+\cvtag{automation}
+\cvtag{log aggregation}
+\cvtag{vulnerability assessment}
+\cvtag{system security and hardening}
+\cvtag{intrusion detection}
+\cvtag{file and platform integrity}
+\cvtag{metrics visualization and analytics}
+\cvtag{transport layer security and encryption}
+\cvtag{privacy and transparency}
+
+\cvsection{Languages}
+
+\cvskill{Spanish}{5}
+\cvskill{English}{3}
 
 \cvsection{Referees}
 % \cvref{name}{email}{mailing address}
