fix: quotes and certifications (#74)

--- a/src/page1sidebar.tex
+++ b/src/page1sidebar.tex
@@ -1,7 +1,13 @@
 \cvsection{Life Philosophy}
+
 \begin{quote}
 ``Talk less, Do more.''
 \end{quote}
+
+\begin{quote}
+``If you want to build a ship, don\'t herd people together to collect wood and don\'t assign them tasks and work, but rather \\teach them to long for the endless immensity of the sea. - Antoine de Saint-Exup\'{e}ry''
+\end{quote}
+
 
 \cvsection{Most Proud of}
 
@@ -21,11 +27,10 @@
 \cvevent{Software Developer}{\textbf{Open Source College}, Lima, Peru}{2011 -- 2012}{}
 
 \cvsection{Certifications}
-\cvcert{Red Hat Certified Sysadmin}{120-126-396}
-\cvcert{CompTIA Linux+}{QDSZ76CC9CRES4RP}
-\cvcert{LPIC-1}{LPI000264195}
-\cvcert{Novell Certified Linux Administrator}{10192939}
-
+\cvcert{Blockchain Theory 101}{UC-5ca28586-6a49-4a2b-8866-c8dced9ea86d}
+\cvcert{Dart \& Introducción a Flutter}{UC-ae7fb794-dd26-431c-b254-c90face1cb37}
+\cvcert{Golang JumpStart}{UC-OLLIR7U2}
+\cvcert{Serverless Architecture on Amazon Web Services}{UC-TGNRQYS5}
 
 
 \addnextpagesidebar[-1ex]{page2sidebar}
