--- a/src/resume.tex
+++ b/src/resume.tex
@@ -1,27 +1,3 @@
-% !TEX program = xelatex
-%%%%%%%%%%%%%%%%%
-% This is an example CV created using altacv.cls (v1.1.3, 30 April 2017) written by
-% LianTze Lim (liantze@gmail.com), based on the
-% Cv created by BusinessInsider at http://www.businessinsider.my/a-sample-resume-for-marissa-mayer-2016-7/?r=US&IR=T
-%
-%% It may be distributed and/or modified under the
-%% conditions of the LaTeX Project Public License, either version 1.3
-%% of this license or (at your option) any later version.
-%% The latest version of this license is in
-%%    http://www.latex-project.org/lppl.txt
-%% and version 1.3 or later is part of all distributions of LaTeX
-%% version 2003/12/01 or later.
-%%%%%%%%%%%%%%%%
-
-%% If you want to use \orcid or the
-%% academicons icons, add "academicons"
-%% to the \documentclass options.
-%% Then compile with XeLaTeX or LuaLaTeX.
-% \documentclass[10pt,a4paper,academicons]{altacv}
-
-%% Use the "normalphoto" option if you want a normal photo instead of cropped to a circle
-% \documentclass[10pt,a4paper,normalphoto]{altacv}
-
 \documentclass[10pt,a4paper]{./core/altacv}
 
 %% AltaCV uses the fontawesome and academicon fonts
@@ -60,12 +36,12 @@
 \renewcommand{\itemmarker}{{\small\textbullet}}
 \renewcommand{\ratingmarker}{\faCircle}
 
-%% sample.bib contains your publications
-\addbibresource{sample.bib}
+%% publications.bib contains your publications
+\addbibresource{./data/publications.bib}
 
 \begin{document}
 \name{Luis Mayta}
-\tagline{Site Reliability Engineer \& Proud Geek}
+\tagline{Passionate Coder {;} | Cryptocurrency and AI Enthusiast | Cloud Consultant | Site Realiability \& Proud Geek}
 \photo{2.5cm}{../static/images/avatar.jpg}
 \personalinfo{%
   % Not all of these are required!
@@ -73,7 +49,7 @@
   \email{slovacus@gmail.com}
   \phone{(+51) 959-196-850}
   \location{Lima, Peru}
-  \homepage{luismayta.me}
+  \homepage{https://luismayta.me}
   \twitter{@slovacus}
   \linkedin{linkedin.com/in/luismayta}
   \github{github.com/luismayta} % I'm just making this up though.
@@ -89,53 +65,210 @@
 %% You can always just use \marginpar{...} if you do
 %% not need to align the top of the contents to any
 %% \cvsection title in the "main" bar.
-\cvsection[page1sidebar]{Experience}
+\cvsection[page1sidebar]{Recent Work Experience}
 
-\cvevent{Bot Developer/SRE}{\textbf{ChatyDelivery}}{November 2017 -- Present}{Lima, Peru}
+\cvevent{\textbf{Founder} \& \textbf{CTO}}{\textbf{HadenLabs}}{Jan 2014 – Now}{Lima, Peru}
+\begin{itemize}
+    \item Act as a trusted technical advisor to customers and solve complex Cloud Infrastructure and DevOps challenges.
+    \item Create and deliver best practices recommendations, tutorials, blog articles, sample code, and technical presentations.
+    \item Wrote Alexa Skill.
+    \item Wrote Terraform modules for resources github, aws and discord.
+    \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu
+    \item Wrote System of IoT working with aws and terraform.
+    \item Test driven releases, Infrastructure as code and Automation.
+    \item Administration and troubleshooting of CI, CD Continuous Integration environment.
+\end{itemize}
 
 \divider
 
-\cvevent{Cloud Engineer/SRE}{\textbf{Fashion Bag Peru}}{April 2017 -- Present}{Lima, Peru}
+\cvevent{DevOps Engineer}{\textbf{Maker Development}}{Nov 2020 – Now}{Lima, Peru}
+\begin{itemize}
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+    \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu
+    \item There was a continuous work on improving the costs of infrastructure. This involved resizing machines, auto scaling groups, spot instances, backup policies and several other things.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
+    \item Test driven releases, Infrastructure as code and Automation.
+\end{itemize}
+
+\divider
+
+\cvevent{\textbf{Cloud Consultant} / SRE}{\textbf{El Pollo Escondido}}{Nov 2020 – Now}{Lima, Peru}
+\begin{itemize}
+    \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu.
+    \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+\end{itemize}
+
+\divider
+
+\cvevent{\textbf{CoFounder} / \textbf{CTO} / SRE}{\textbf{EquipIndustry}}{Jul 2019 – Nov 2020}{Lima, Peru}
+\begin{itemize}
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+    \item Define and refine process day to day basis as per requirements and identified bottlenecks
+    \item There was a continuous work on improving the costs of infrastructure. This involved resizing machines, auto scaling groups, spot instances, backup policies and several other things.
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Implementation of Next, React with Redux using TypeScript.
+    \item Wrote Terraform modules for resources github, aws and discord.
+    \item Requirement analysis \& gathering from product owners
+    \item Implementation of GraphQL with AWS AppSync.
+    \item Implementation of Data Store with ElasticSearch, Neo4J and PostgreSQL.
+\end{itemize}
+
+\divider
+
+\cvevent{\textbf{Cloud Consultant} / SRE}{\textbf{Osakia}}{Apr 2020 – Jun 2020}{Lima, Peru}
+\begin{itemize}
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+    \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Provisioning Nginx, ElasticSearch, PostgreSQL, Python, and Go mainly using Docker and Ansible, but also manual configuration when required.
+\end{itemize}
+
+\divider
+
+\cvevent{\textbf{Cloud Consultant} / SRE / DevOps}{\textbf{Vipac Peru}}{Apr 2019 – Jun 2020}{Lima, Peru}
+\begin{itemize}
+    \item I also replaced and improved the entire monitoring stack and wrote lots of alert rules and even custom Prometheus exporters to achieve what was needed.
+    \item There was a continuous work on improving the costs of infrastructure. This involved resizing machines, auto scaling groups, spot instances, backup policies and several other things.
+    \item Test driven releases, Infrastructure as code and Automation.
+    \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
+    \item Administration and troubleshooting of CI, CD Continuous Integration environment.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
+\end{itemize}
+
+\divider
+
+\cvevent{\textbf{Cloud Consultant}}{\textbf{Vipac Peru}}{Sep 2018 – Dec 2018}{Lima, Peru}
+\begin{itemize}
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+    \item Analysis and deployment of scalable solutions.
+    \item Manage and optimize (cost and performance) of cloud resources.
+    \item Implementation and Monitoring of Servers
+    \item Testing ansible playbooks and changes on server.
+\end{itemize}
+
+\divider
+
+\cvevent{\textbf{CoFounder} / \textbf{CTO} / SRE}{\textbf{Chaty}}{November 2017 -- Jul 2019}{Lima, Peru}
+\begin{itemize}
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
+    \item There was a continuous work on improving the costs of infrastructure. This involved resizing machines, auto scaling groups, spot instances, backup policies and several other things.
+    \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
+    \item Provisioning Nginx, ElasticSearch, PostgreSQL, Python, and Go mainly using Ansible, but also manual configuration when required.
+    \item Administering web environments both on Nginx environments for virtual hosts, redirects, SSL/TLS set up, Django settings as well as troubleshooting any error that the environments throw up.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Implement And Administration of Chatbot for Facebook
+    \item Research and Review AWS Alexa
+    \item Alexa Skill Development.
+    \item Implementation of AWS ECS Fargate
+    \item Implementation of GraphQL with Aws AppSync
+\end{itemize}
+
+\divider
+
+\cvevent{Cloud Consultant / SRE}{\textbf{Gap Solutions}}{Dec 2017 – Feb 2018}{Lima, Peru}
+\begin{itemize}
+    \item Support a distributed development team.
+    \item Analysis and deployment of scalable solutions.
+    \item Manage and optimize (cost and performance) of cloud resources.
+    \item Integration of different subsystems
+    \item Managing IT team.
+    \item Carrying out proposed projects.
+    \item Proposing constant improvements.
+    \item Support a distributed development team.
+    \item Integration of different subsystems
+\end{itemize}
+
+\divider
+
+\cvevent{Cloud Engineer / SRE}{\textbf{Fashion Bag Peru}}{April 2017 -- Dec 2017}{Lima, Peru}
+\begin{itemize}
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+    \item Support a distributed development team.
+    \item Integration of different subsystems
+    \item Testing ansible playbooks and changes on server.
+    \item Implementation And Administration of Services AWS SQS, AWS Elasticache
+\end{itemize}
 
 \divider
 
 \cvevent{Cloud Architect}{\textbf{La Positiva Seguros}}{June 2017 -- November 2017}{Lima, Peru}
+\begin{itemize}
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+    \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu
+    \item Administration and troubleshooting of CI, CD Continuous Integration environment.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Implement and Management ChatBot with Aws Lambda
+\end{itemize}
 
 \divider
 
 \cvevent{Software Architect}{\textbf{Ventorystack}}{January 2017 -- June 2017}{Lima, Peru}
+\begin{itemize}
+    \item Infrastructure as code with Terraform + Ansible + AWS.
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
+    \item Administration and troubleshooting of CI, CD Continuous Integration environment.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Test driven releases, Infrastructure as code and Automation.
+\end{itemize}
 
 \divider
 
 \cvevent{Software Development Leader}{\textbf{Pimienta Digital}}{October 2014 -- July 2015}{Lima, Peru}
+\begin{itemize}
+    \item Create and deliver best practices recommendations, tutorials, blog articles, sample code, and technical presentations.
+    \item Management servers Digital Ocean.
+    \item Implement and Management RabbitMQ, AWS S3, Puppet, Vagrant.
+    \item Implement Load Stress with Python.
+    \item Implement Management of git with Git Flow.
+    \item Implement Sem Version for projects.
+    \item Management SalesForce.
+\end{itemize}
 
 \divider
 
 \cvevent{Technical Leader}{\textbf{Grupo El Comercio}}{April 2013 -- October 2014}{Lima, Peru}
+\begin{itemize}
+    \item Create and deliver best practices recommendations, tutorials, blog articles, sample code, and technical presentations.
+    \item Implement and Management Apache Solr, RabbitMQ, MongoDB, REST, Puppet, Vagrant.
+    \item Implement TDD and BDD with python.
+    \item Implement Sem Version for projects.
+    \item Implement Management of git with Git Flow.
+\end{itemize}
 
 \divider
 
-\cvevent{Software Developer}{\textbf{Grupo El Comercio}}{March 2012 -- April 2013}{Lima, Peru}
+\cvsection{Part-time roles}
 
-\divider
+\cvevent{}{Software Developer Freedom Project}{February 2018 to Present}{github.com/PunoPeru}
+\begin{itemize}
+    \item Maintaining the organization.
+\end{itemize}
 
-\cvsection{A Day of My Life}
 
-% Adapted from @Jake's answer from http://tex.stackexchange.com/a/82729/226
-% \wheelchart{outer radius}{inner radius}{
-% comma-separated list of value/text width/color/detail}
-\wheelchart{1.5cm}{0.5cm}{%
-  20/13em/accent!30/Sleeping \& dreaming about work,
-  25/9em/accent!60/Resolving issues of code,
-  10/12em/accent!40/Spending time with family,
-  20/9em/accent/Research of tools and solutions,
-  10/8em/accent!20/Relearning in automation,
-  15/8em/accent!20/Resolving issues public in Github
-}
+%% \cvsection{A Day of My Life}
 
-\clearpage
+%% % Adapted from @Jake's answer from http://tex.stackexchange.com/a/82729/226
+%% % \wheelchart{outer radius}{inner radius}{
+%% % comma-separated list of value/text width/color/detail}
+%% \wheelchart{1.5cm}{0.5cm}{%
+%%   20/13em/accent!30/Sleeping \& dreaming about work,
+%%   25/9em/accent!60/Resolving issues of code,
+%%   10/12em/accent!40/Spending time with family,
+%%   20/9em/accent/Research of tools and solutions,
+%%   10/8em/accent!20/Relearning in automation,
+%%   15/8em/accent!20/Resolving issues public in Github
+%% }
 
-\cvsection[page2sidebar]{Conferences}
+
+\cvsection{Conferences}
 
 \cvevent{Mean Full-Stack}{\textbf{Compartiendo Conocimiento}}{April 2015}{Hauraz, Peru}
 \begin{itemize}
@@ -167,19 +300,6 @@
 
 \divider
 
-
-%% \printbibliography[heading=pubtype,title={\printinfo{\faFileTextO}{Journal Articles}}, type=article]
-
-%% \divider
-
-%% \printbibliography[heading=pubtype,title={\printinfo{\faGroup}{Conference Proceedings}},type=inproceedings]
-
-%% If the NEXT page doesn't start with a \cvsection but you'd
-%% still like to add a sidebar, then use this command on THIS
-%% page to add it. The optional argument lets you pull up the
-%% sidebar a bit so that it looks aligned with the top of the
-%% main column.
-% \addnextpagesidebar[-1ex]{page3sidebar}
-
+\clearpage
 
 \end{document}
