refactor: cv tex (#74)

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -66,14 +66,14 @@
 \begin{document}
 \name{Luis Mayta}
 \tagline{Passionate Coder {;} | Cryptocurrency and AI Enthusiast | Cloud Consultant | Site Realiability \& Proud Geek}
-\photo{2.5cm}{avatar.jpg}
+\photo{2.5cm}{../static/images/avatar.jpg}
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
   \email{slovacus@gmail.com}
   \phone{(+51) 959-196-850}
   \location{Lima, Peru}
-  \homepage{luismayta.me}
+  \homepage{https://luismayta.me}
   \twitter{@slovacus}
   \linkedin{linkedin.com/in/luismayta}
   \github{github.com/luismayta} % I'm just making this up though.
@@ -266,9 +266,7 @@
   15/8em/accent!20/Resolving issues public in Github
 }
 
-\clearpage
-
-\cvsection[page2sidebar]{Conferences}
+\cvsection{Conferences}
 
 \nocite{*}
 
@@ -318,5 +316,6 @@
 %% main column.
 % \addnextpagesidebar[-1ex]{page3sidebar}
 
+\clearpage
 
 \end{document}
