--- a/resume.tex
+++ b/resume.tex
@@ -39,7 +39,7 @@
 \begin{document}
 \name{Luis Mayta}
 \tagline{Passionate Coder {;} | Cryptocurrency and AI Enthusiast | Cloud Consultant | Site Realiability \& Proud Geek}
-\photo{2.5cm}{../static/images/avatar.jpg}
+\photo{2.5cm}{./static/images/avatar.jpg}
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
